# fmock

./: .gitignore  CMakeLists.txt  README.md
include/: fmock.hpp
include/fmock/: expect_error.hpp  fmock.hpp  matcher.hpp  to_str.hpp
include/fmock/detail/: answer.hpp  answer_builder.hpp  call_check.hpp  constructor.hpp  count_args.hpp  expect_error.hpp  expectation.hpp  make_matcher.hpp  matcher.hpp  mock.hpp  shared_mock.hpp  type_info_tuple.hpp
include/fmock/detail/matchers/: any.hpp  equals.hpp
include/fmock/detail/types/: arg_of.hpp  at.hpp  has_call_operator.hpp  is_function_or_method.hpp  is_matcher.hpp  remove_class.hpp  signature_of.hpp
include/fmock/matchers/: anonymous.hpp  any.hpp  equals.hpp
include/fmock/types/: arg_of.hpp  at.hpp  count_types.hpp  has_call_operator.hpp  is_function_or_method.hpp  is_matcher.hpp  is_matcher_function.hpp  remove_class.hpp  signature_of.hpp  type_info_tuple.hpp
test/: CMakeLists.txt  arg_of.cpp  has_call_operator.cpp  is_matcher.cpp  is_matcher_function.cpp  make_matcher_static.cpp  signature_of.cpp  static_tests.cpp  throw.cpp
